# poetry-mre

dep/: pyproject.toml
main/: pyproject.toml
