[tool.poetry]
name = "dep"
version = "0.1.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7.1, <3.12"

numpy = [
  { version = ">=1.21.0,<1.22.0", python = "<3.8" },
  { version = ">=1.22.0", python = ">=3.8,<3.9" },
  { version = "^1.23.2,<=1.26.1", python = ">=3.9" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
